--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -31,14 +31,6 @@
         "payments_feature_1_desc": "When a customer buys your art, they can pay easily with UPI. You get the payment instantly. Simple, fast, and fair.",
         "payments_feature_2_title": "Direct & Transparent",
         "payments_feature_2_desc": "No hidden charges. No delays. Your hard-earned money reaches you directly, empowering you to grow your business.",
-        "overview_buyer_title": "For Art Lovers: Discover & Connect",
-        "overview_buyer_subtitle": "Explore a world of unique, handcrafted art and connect directly with the artisans who create it.",
-        "overview_buyer_1_title": "Discover Unique Art",
-        "overview_buyer_1_desc": "Browse our curated collection of authentic Indian art, from traditional paintings to contemporary crafts.",
-        "overview_buyer_2_title": "Connect with Artisans",
-        "overview_buyer_2_desc": "Follow your favorite artists, learn about their process, and engage with the stories behind their work.",
-        "overview_buyer_3_title": "Support Local Crafts",
-        "overview_buyer_3_desc": "Every purchase you make directly supports Indian artisans and helps preserve our rich cultural heritage.",
         "footer": "© {year} Artisan. All rights reserved."
     },
     "login_page": {
@@ -49,15 +41,11 @@
         "password_label": "Password",
         "forgot_password": "Forgot your password?",
         "login_seller_button": "Login as Artisan",
-        "login_buyer_button": "Login as Buyer",
         "signup_link": "Don't have an account? Sign up"
     },
     "signup_page": {
-        "title": "Join Artisan",
-        "description": "Create an account to start your journey.",
-        "role_label": "I am a...",
-        "role_seller": "Seller / Artisan",
-        "role_buyer": "Buyer / Art Lover",
+        "title": "Create an Artisan Account",
+        "description": "Join Artisan to start your creative journey.",
         "avatar_label": "Upload a Profile Picture",
         "username_label": "Username",
         "username_placeholder": "e.g., PriyaKumar",
@@ -93,7 +81,6 @@
         "menu_academy": "Artisan Academy",
         "menu_live_studio": "Live Studio",
         "menu_requests": "Follow Requests",
-        "menu_cart": "Cart",
         "account_menu_label": "My Account",
         "account_menu_verify": "Verify Account",
         "account_menu_profile": "Profile",
