describe  the features  present on interface clearly

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -7,23 +7,23 @@
         "login": "Login",
         "signup": "Sign Up",
         "features_title": "Features for the Modern Artisan",
-        "features_subtitle": "From image to story, our AI is trained to help you showcase the soul of your work.",
+        "features_subtitle": "From image to story, our AI is trained to help you showcase the soul of your work. Each feature is designed to teach you valuable skills for the digital marketplace.",
         "feature_1_title": "AI Content Generation",
-        "feature_1_desc": "Upload a photo and get a compelling description and tags to use for marketing.",
+        "feature_1_desc": "Learn to write compelling marketing copy. Upload a photo and get an AI-generated description and tags to use as a starting point.",
         "feature_2_title": "AI Storyteller",
-        "feature_2_desc": "Tell your story, and our AI will refine it into a captivating narrative.",
+        "feature_2_desc": "Master the art of narrative. Tell your product's story, and our AI will help you refine it into a captivating tale that connects with customers.",
         "feature_3_title": "AI Business Mentor",
-        "feature_3_desc": "Get expert advice on marketing, pricing, and business strategy.",
+        "feature_3_desc": "Get free, expert advice on marketing, pricing, and business strategy to grow your knowledge and confidence.",
         "feature_4_title": "AI Idea Hub",
-        "feature_4_desc": "Generate creative suggestions to innovate your products and expand your reach.",
+        "feature_4_desc": "Spark your creativity. Generate innovative suggestions to modernize your products and expand your reach to new audiences.",
         "art_title": "A Platform to Learn and Grow",
         "art_subtitle": "Everything you need to master your art business and reach a wider audience.",
         "overview_seller_1_title": "Showcase Your Creations",
-        "overview_seller_1_desc": "Easily upload, categorize, and create beautiful showcases for all your artwork from a single, intuitive dashboard.",
+        "overview_seller_1_desc": "Practice creating beautiful product listings. Upload, categorize, and build showcases for your artwork in an intuitive dashboard.",
         "overview_seller_2_title": "Gain Valuable Insights",
-        "overview_seller_2_desc": "Understand market trends and get feedback with our smart analytics and AI-powered insights.",
+        "overview_seller_2_desc": "Learn what sells. Understand market trends and get feedback with our smart analytics and AI-powered insights.",
         "overview_seller_3_title": "Connect with a Community",
-        "overview_seller_3_desc": "Join a vibrant community of fellow artisans to share ideas, collaborate, and grow together.",
+        "overview_seller_3_desc": "You're not alone. Join a vibrant community of fellow artisans to share ideas, collaborate, and grow together.",
         "footer": "© {year} Artisan. All rights reserved."
     },
     "login_page": {
@@ -34,7 +34,8 @@
         "password_label": "Password",
         "forgot_password": "Forgot your password?",
         "login_seller_button": "Login",
-        "signup_link": "Don't have an account? Sign up"
+        "signup_link": "Don't have an account? Sign up",
+        "legal_disclaimer": "By logging in, you agree to our Terms of Service and Privacy Policy."
     },
     "signup_page": {
         "title": "Create an Artisan Account",
@@ -70,19 +71,28 @@
         "menu_analytics": "Analytics",
         "menu_marketing": "Marketing Hub",
         "menu_community": "Community Hub",
-        "menu_support": "Support",
+        "menu_support": "AI Mentor",
         "menu_academy": "Artisan Academy",
         "menu_live_studio": "Live Studio",
         "menu_requests": "Follow Requests",
+        "menu_suggestions": "AI Idea Hub",
         "account_menu_label": "My Account",
         "account_menu_verify": "Verify Account",
         "account_menu_profile": "Profile",
         "account_menu_settings": "Settings",
         "account_menu_logout": "Log out"
     },
+    "dashboard_page": {
+        "title": "Welcome to Your Dashboard",
+        "description": "This is your creative headquarters. From here, you can access all the tools to build your skills, showcase your art, and grow your business knowledge.",
+        "trending_title": "Trending Now",
+        "trending_description": "See what designs and art forms are currently popular on the platform to get inspiration for your next creation.",
+        "creations_title": "Your Creations",
+        "creations_description": "An overview of the product showcases you've built. Use this space to practice and perfect your listings."
+    },
     "verification_page": {
         "title": "Account Verification",
-        "description": "To use features like the Live Studio, please verify your identity.",
+        "description": "To use features like the Live Studio, please verify your identity. This helps us maintain a safe and trusted community for everyone.",
         "aadhaar_title": "Aadhaar Verification",
         "aadhaar_description": "To verify your identity, please provide your Aadhaar details.",
         "aadhaar_label": "Aadhaar Number",
@@ -124,47 +134,47 @@
     },
     "community_page": {
         "title": "Community Hub",
-        "description": "Connect with fellow artisans, share ideas, and collaborate.",
+        "description": "Connect with fellow artisans, share ideas, and collaborate. Learning from others is a great way to grow your skills.",
         "follow_button": "Follow"
     },
     "requests_page": {
         "title": "Follow Requests",
-        "description": "Manage your incoming follow requests from other artisans.",
+        "description": "Manage your incoming follow requests from other artisans in the community.",
         "card_title": "Incoming Requests",
-        "card_description": "Approve or decline requests to connect.",
+        "card_description": "Approve or decline requests to connect with other creators.",
         "no_requests": "You have no pending follow requests.",
         "accept_button": "Accept",
         "decline_button": "Decline"
     },
     "live_studio_page": {
         "video_preview_title": "Live Studio",
-        "video_preview_description": "Your camera feed for the live stream. What you see here is what your audience will see.",
+        "video_preview_description": "Your camera feed for the live stream. What you see here is what your audience will see. Use this to demonstrate your craft and engage with viewers.",
         "camera_access_denied": "Camera Access Denied",
         "enable_camera_prompt": "Please enable camera permissions in your browser settings to use this feature.",
         "camera_access_required": "Camera Access Required",
         "allow_camera_access_prompt": "Please allow camera access in your browser to use the Live Studio.",
         "stream_controls_title": "Stream Controls",
-        "stream_controls_description": "Manage your live session from here.",
+        "stream_controls_description": "Manage your live session from here. Give your stream a catchy title to attract viewers.",
         "stream_title_label": "Stream Title",
         "stream_title_placeholder": "e.g., Live Pottery Session",
         "go_live_button": "Go Live",
         "end_stream_button": "End Stream",
         "live_chat_title": "Live Chat",
-        "live_chat_description": "Engage with your audience.",
+        "live_chat_description": "Engage with your audience in real-time. Answer questions and get feedback on your work.",
         "chat_message_1": "This is amazing! Can't wait to see the final piece.",
         "chat_message_2": "What kind of clay are you using?",
         "chat_message_3": "Great technique! I'm learning so much.",
         "chat_placeholder": "Send a message...",
         "verification_required_title": "Verification Required",
-        "verification_required_description": "You must be a verified artist to go live.",
+        "verification_required_description": "You must be a verified artist to go live. This ensures a safe community for everyone.",
         "verify_now_link": "Verify Now"
     },
     "support_page": {
-        "title": "Support Center",
-        "description": "Have a question? Ask our AI assistant or check the FAQs below.",
+        "title": "Your AI Mentor",
+        "description": "Have a question about business or marketing? Ask our AI assistant or check the FAQs below.",
         "ask_ai_title": "Ask a Question",
-        "ask_ai_desc": "Enter your query below and our AI will do its best to help you.",
-        "ask_ai_placeholder": "e.g., How do I change my product's price?",
+        "ask_ai_desc": "Enter your query below and our AI will provide expert advice to help you on your journey.",
+        "ask_ai_placeholder": "e.g., How do I market my hand-painted sarees on Instagram?",
         "ask_ai_button": "Ask AI",
         "asking_button": "Asking...",
         "ai_assistant_title": "AI Assistant",
@@ -204,8 +214,55 @@
     },
     "academy_page": {
         "title": "Artisan Academy",
-        "description": "Sharpen your skills and grow your business with our expert-led tutorials.",
+        "description": "Sharpen your skills and grow your business with our expert-led tutorials. This is your personal library for learning the craft and the business of art.",
         "card_title": "Video Library",
-        "card_description": "Explore our collection of tutorials designed to help you succeed."
+        "card_description": "Explore our collection of video tutorials designed to help you master new techniques and succeed in the marketplace."
+    },
+    "new_product_page": {
+        "image_card_title": "Product Image",
+        "image_card_description": "A great photo is the first step to a great listing. Upload a clear photo of your creation, or generate one with AI to practice.",
+        "generate_desc_button": "Generate Description & Tags",
+        "image_gen_card_title": "AI Image Generator",
+        "image_gen_card_description": "Don't have a photo? Describe the product you imagine, and our AI will create a professional studio image for you.",
+        "image_gen_button": "Generate Image",
+        "video_card_title": "Video Showcase",
+        "video_card_description": "Bring your product to life. Add a video link (e.g., YouTube) to show your creation process or the product in action.",
+        "details_card_title": "Product Details",
+        "details_card_description": "This is where you practice writing a compelling product listing. AI-generated content will appear here for you to edit and improve.",
+        "specs_card_title": "Specifications",
+        "specs_card_description": "Practice filling out the important details that customers look for, like materials, dimensions, and your unique creation process.",
+        "pricing_card_title": "Pricing Strategy",
+        "pricing_card_description": "Learn to price your work effectively. Set a practice price, or get an AI suggestion based on simulated market data to understand value.",
+        "price_button": "Suggest Price",
+        "story_card_title": "AI Storyteller",
+        "story_card_description": "Every piece has a story. Tell us about your inspiration and process, and our AI will help you polish it into a captivating narrative that connects with buyers.",
+        "story_button": "Refine with AI",
+        "save_button": "Save Product"
+    },
+    "marketing_page": {
+        "title": "AI Marketing Hub",
+        "description": "Learn how to market your products effectively. Select a product showcase and generate a complete marketing plan to practice your promotional skills.",
+        "select_card_title": "Select a Product Showcase",
+        "select_card_description": "Choose one of your showcases to create a practice marketing plan for.",
+        "generate_button": "Generate Marketing Plan",
+        "audience_card_title": "Target Audience",
+        "ad_preview_card_title": "Social Media Ad Preview",
+        "post_card_title": "Social Media Post",
+        "email_card_title": "Promotional Email",
+        "platform_card_title": "Platform Recommendations",
+        "platform_card_description": "Learn where you could sell your product online in India and get tips for each platform."
+    },
+    "suggestions_page": {
+        "title": "AI Idea Hub",
+        "description": "Spark your creativity and learn how to innovate. Select one of your showcases to generate AI-powered ideas for new products and marketing angles.",
+        "select_card_title": "Select Your Product Showcase",
+        "select_card_description": "Choose one of your creations to get AI-powered suggestions for.",
+        "generate_button": "Generate Suggestions",
+        "variations_card_title": "Modern Product Variations",
+        "variations_card_description": "Learn how to adapt your traditional skills to new, contemporary products that have market appeal.",
+        "concepts_card_title": "New Design Concepts",
+        "concepts_card_description": "Get fresh ideas for designs and patterns that blend your heritage with modern aesthetics.",
+        "expansion_card_title": "Target Audience Expansion",
+        "expansion_card_description": "Discover new customer segments and learn how to tailor your marketing to reach them."
     }
 }
