--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -33,7 +33,7 @@
         "form_placeholder": "m@example.com",
         "password_label": "Password",
         "forgot_password": "Forgot your password?",
-        "login_seller_button": "Login",
+        "login_seller_button": "Login as Artisan",
         "signup_link": "Don't have an account? Sign up",
         "legal_disclaimer": "By logging in, you agree to our Terms of Service and Privacy Policy."
     },
@@ -264,5 +264,16 @@
         "concepts_card_description": "Get fresh ideas for designs and patterns that blend your heritage with modern aesthetics.",
         "expansion_card_title": "Target Audience Expansion",
         "expansion_card_description": "Discover new customer segments and learn how to tailor your marketing to reach them."
+    },
+    "cart_page": {
+        "title": "Your Shopping Cart",
+        "empty_title": "Your cart is empty",
+        "empty_description": "Looks like you haven't added any items yet. Start exploring to find something you love!",
+        "summary_title": "Order Summary",
+        "summary_description": "Review your order before checking out.",
+        "subtotal": "Subtotal",
+        "shipping": "Shipping",
+        "total": "Total",
+        "checkout_button": "Proceed to Checkout"
     }
 }
