--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -30,6 +30,9 @@
         "payments_feature_1_desc": "Learn how customers can pay easily with methods like UPI. In a real store, this means you get paid instantly. Simple, fast, and fair.",
         "payments_feature_2_title": "Direct & Transparent",
         "payments_feature_2_desc": "No hidden charges. No delays. On a real platform, your hard-earned money should reach you directly, empowering you to grow your business.",
+        "gov_support_title": "Grow with Government Support",
+        "gov_support_subtitle": "The Government of India is committed to helping local entrepreneurs succeed. Explore initiatives like Startup India to access resources, funding, and mentorship to take your art business to the next level.",
+        "gov_support_button": "Explore Startup India",
         "footer": "© {year} Artisan. All rights reserved."
     },
     "login_page": {
