--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -53,7 +53,7 @@
         "email_placeholder": "m@example.com",
         "phone_label": "தொலைபேசி எண்",
         "phone_placeholder": "எ.கா., 9876543210",
-        "phone2_label": "இரண்டாவது தொலைபேசி எண் (கட்டாயம்)",
+        "phone2_label": "இரண்டாவது தொலைபேசி எண் (விருப்பத்தேர்வு)",
         "phone2_placeholder": "ஒரு மாற்று தொலைபேசி எண்ணை உள்ளிடவும்",
         "address_label": "முகவரி",
         "address_placeholder": "உங்கள் முழு முகவரியை உள்ளிடவும்",
@@ -147,7 +147,7 @@
         "video_preview_title": "நேரடி ஸ்டுடியோ",
         "video_preview_description": "நேரடி ஒளிபரப்பிற்கான உங்கள் கேமரா ஊட்டம். நீங்கள் இங்கே பார்ப்பதை உங்கள் பார்வையாளர்கள் பார்ப்பார்கள்.",
         "camera_access_denied": "கேமரா அணுகல் மறுக்கப்பட்டது",
-        "enable_camera_prompt": "இந்த அம்சத்தைப் பயன்படுத்த உங்கள் உலாவி அமைப்புகளில் கேமरा அனுமதிகளை இயக்கவும்.",
+        "enable_camera_prompt": "இந்த அம்சத்தைப் பயன்படுத்த உங்கள் உலாவி அமைப்புகளில் கேமரா அனுமதிகளை இயக்கவும்.",
         "camera_access_required": "கேமரா அணுகல் தேவை",
         "allow_camera_access_prompt": "நேரடி ஸ்டுடியோவைப் பயன்படுத்த உங்கள் உலாவியில் கேமரா அணுகலை அனுமதிக்கவும்.",
         "stream_controls_title": "ஓடை கட்டுப்பாடுகள்",
