--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -2,7 +2,7 @@
 {
     "homepage": {
         "title": "AI کے ساتھ اپنے فن کو بااختیار بنائیں",
-        "subtitle": "آرٹیسن آپ کو اپنی منفرد تخلیقات کو بیان کرنے، بیان کرنے اور بیچنے میں مدد کرنے کے لیے ذہین اوزار فراہم کرتا ہے۔ اپنے فن پر توجہ مرکوز کریں، ہم الفاظ کو سنبھال لیں گے۔ کاریگروں کے لیے پلیٹ فارم مکمل طور पर مفت ہے۔",
+        "subtitle": "آرٹیسن آپ کو اپنی منفرد تخلیقات کو بیان کرنے، بیان کرنے اور بیچنے میں مدد کرنے کے لیے ذہین اوزار فراہم کرتا ہے۔ اپنے فن پر توجہ مرکوز کریں، ہم الفاظ کو سنبھال لیں گے۔ کاریگروں کے لیے پلیٹ فارم مکمل طور پر مفت ہے۔",
         "artisans_button": "اپنا سفر شروع کریں",
         "login": "لاگ ان کریں",
         "signup": "سائن اپ کریں",
@@ -28,9 +28,9 @@
         "payments_subtitle": "ہم آپ کے فن کے لیے ادائیگیوں کو بغیر کسی رکاوٹ کے وصول کرنے کے لیے ادائیگی کے طریقوں کی ایک وسیع رینج کی حمایت کرتے ہیں۔ تمام لین دین محفوظ اور ہندوستانی ضوابط کے مطابق ہیں۔",
         "payments_extra": "...اور بہت سے UPI، کریڈٹ اور ڈیبٹ کارڈ کے اختیارات۔",
         "payments_feature_1_title": "آپ کے لیے آسان ادائیگیاں",
-        "payments_feature_1_desc": "جب کوئی گاہک آپ کا فن خریدتا ہے، تو وہ UPI کے ذریعے آسانی سے ادائیگی کر سکتا ہے۔ آپ کو ادائیگی فوری طور پر مل جاتی ہے۔ سادہ، تیز اور منصفانہ۔",
+        "payments_feature_1_desc": "جب کوئی گاہک آپ کا فن خریدتا ہے، تو وہ UPI کے ذریعے آسانی سے ادائیگی کر سکتا ہے۔ آپ کو ادائیگی فوری طور पर مل जाती ہے۔ سادہ، تیز اور منصفانہ۔",
         "payments_feature_2_title": "براہ راست اور شفاف",
-        "payments_feature_2_desc": "کوئی پوشیدہ چارجز نہیں۔ کوئی تاخیر نہیں۔ آپ کی محنت کی کمائی براہ راست آپ تک پہنچتی ہے، جو آپ کو اپنے کاروبار کو بڑھانے کے لیے بااختیار بناتی ہے۔",
+        "payments_feature_2_desc": "کوئی پوشیدہ چارجز نہیں۔ کوئی تاخیر نہیں۔ آپ کی محنت کی کمائی براہ راست آپ تک پہنچتی ہے، جو آپ کو اپنے کاروبار کو بڑھانے کے لیے بااختیar بناتی ہے۔",
         "footer": "© {year} آرٹیسن۔ جملہ حقوق محفوظ ہیں."
     },
     "login_page": {
@@ -53,7 +53,7 @@
         "email_placeholder": "m@example.com",
         "phone_label": "فون نمبر",
         "phone_placeholder": "مثلاً 9876543210",
-        "phone2_label": "دوسرا فون نمبر (لازمی)",
+        "phone2_label": "دوسرا فون نمبر (اختیاری)",
         "phone2_placeholder": "ایک متبادل فون نمبر درج کریں",
         "address_label": "پتہ",
         "address_placeholder": "اپنا مکمل پتہ درج کریں",
@@ -179,7 +179,7 @@
         "thinking": "سوچ رہا ہے...",
         "no_feedback_title": "کوئی فیڈ بیک فراہم نہیں کیا گیا",
         "no_feedback_description": "براہ کرم جمع کرانے से پہلے اپنی تجویز درج کریں۔",
-        "success_title": "فیڈ بیک کا تجزیہ کیا गया!",
+        "success_title": "فیڈ بیک کا تجزیہ کیا گیا!",
         "success_description": "AI نے تجویز پر کارروائی کی ہے۔",
         "error_title": "تجزیہ ناکام",
         "error_description": "فیڈ بیک کا تجزیہ کرنے میں ناکام۔ براہ کرم دوبارہ کوشش کریں"
