change the name of the chatbot to your wish that should be in indian myt

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -80,7 +80,7 @@
         "menu_analytics": "Analytics",
         "menu_marketing": "Marketing Hub",
         "menu_community": "Community Hub",
-        "menu_support": "AI Mentor",
+        "menu_support": "Vishwakarma AI",
         "menu_academy": "Artisan Academy",
         "menu_live_studio": "Live Studio",
         "menu_requests": "Follow Requests",
@@ -179,15 +179,15 @@
         "verify_now_link": "Verify Now"
     },
     "support_page": {
-        "title": "Your AI Mentor",
+        "title": "Vishwakarma AI Mentor",
         "description": "Have a question about business or marketing? Ask our AI assistant or check the FAQs below.",
         "ask_ai_title": "Ask a Question",
         "ask_ai_desc": "Enter your query below and our AI will provide expert advice to help you on your journey.",
         "ask_ai_placeholder": "e.g., How do I market my hand-painted sarees on Instagram?",
         "ask_ai_button": "Ask AI",
         "asking_button": "Asking...",
-        "ai_assistant_title": "AI Assistant",
-        "ai_assistant_desc": "Here is the response to your query.",
+        "ai_assistant_title": "Vishwakarma AI",
+        "ai_assistant_desc": "Here is my advice for you.",
         "thinking": "Thinking...",
         "no_query_title": "No Query Provided",
         "no_query_desc": "Please enter your question before submitting.",
